# AnchorWorks

./: .gitignore  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  release.yml
docker/: build-linux.Dockerfile  build-linux.sh  build-windows.Dockerfile  build-windows.sh
docs/: USER_GUIDE.md
electron/: main.cjs  preload.cjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AIPanel.tsx  AlignPanel.tsx  ArtboardLayer.tsx  ArtboardsPanel.tsx  AssetsPanel.tsx  CanvasContextMenu.tsx  CanvasView.tsx  CharacterPanel.tsx  ColorPickerPopover.tsx  CommandPalette.tsx  ConfirmHost.tsx  ContrastChecker.tsx  CutContourDialog.tsx  CutPathLayer.tsx  DebugPanel.tsx  DocSettingsDialog.tsx  EmptyCanvasHint.tsx  EraserHUD.tsx  FontPicker.tsx  GridOverlay.tsx  HelpCenter.tsx  InspectPanel.tsx  KeymapEditor.tsx  LayersPanel.tsx  Loading.tsx  Logo.tsx  MenuBar.tsx  OfflineBanner.tsx  Onboarding.tsx  PlotterDialog.tsx  PreferencesDialog.tsx  PrintDialog.tsx  PropertiesPanel.tsx  QuickHelp.tsx  RecoveryDialog.tsx  RepeatDialog.tsx  RowInput.tsx  Rulers.tsx  ShortcutsDialog.tsx  StatusBar.tsx  (+5 more)
src/lib/: a11y.ts  ai.ts  alignDistribute.ts  anchorSnap.ts  artboards.ts  autosave.ts  booleanOps.ts  canvasEngine.ts  canvasEvents.ts  clipboard.ts  confirm.ts  contrast.ts  cutContour.ts  debug.ts  docOps.ts  drawStyle.ts  effects.ts  eraserHitTest.ts  fabricBootstrap.ts  filters.ts  fonts.ts  formatRegistration.ts  formats.ts  grouping.ts  history.ts  historyOps.ts  i18n.ts  inspect.ts  io.ts  io2.ts  io3.ts  keymap.ts  masks.ts  mcp.ts  objectId.ts  onboarding.ts  outlineView.ts  panSession.ts  pathEdit.ts  pathOps.ts  (+29 more)
src/lib/__tests__/: anchorSnap.test.ts  autosave.test.ts  contrast.test.ts  cutContour.test.ts  effects.test.ts  fonts.test.ts  history.test.ts  i18n.test.ts  masks.test.ts  mcp.test.ts  pathOps.test.ts  plotter.test.ts  pltImporter.test.ts  recentFiles.test.ts  strokeAlign.test.ts  templates.test.ts
src/lib/hooks/: useEscapeClose.ts  useFocusRestore.ts  (+1 more)
src/store/: editor.ts
tests/e2e/: a11y.spec.ts  drawing.spec.ts  fixtures.ts  help.spec.ts  layers.spec.ts  palette.spec.ts  pen.spec.ts  recent.spec.ts  shortcuts.spec.ts  smoke.spec.ts  theme.spec.ts  tools.spec.ts  zoom.spec.ts
(+7 files in other folders)
